@@ -1,8 +1,8 @@
 Package: GeNetIt
 Type: Package
 Title: Spatial Graph-Theoretic Genetic Gravity Modelling
-Version: 0.1-3
-Date: 2020-01-28
+Version: 0.1-4
+Date: 2020-03-06
 Authors@R: c(person(family="Evans", given="Jeffrey S.", email = "jeffrey_evans@tnc.org", 
              role = c("aut", "cre")), person(family="Murphy", given="Melanie", role = "aut") )
 Description: Implementation of spatial graph-theoretic genetic gravity models.
@@ -13,13 +13,15 @@ Description: Implementation of spatial graph-theoretic genetic gravity models.
 Depends:
     R (>= 3.6.0)
 Imports:
+    exactextractr,
+	methods,
     nlme,
     sp,
     spdep,
     spatialEco,
     raster,
-	velox,
-	rgeos
+	rgeos,
+	sf
 Maintainer: Jeffrey S. Evans <jeffrey_evans@tnc.org>
 License: GPL-3
 URL: https://github.com/jeffreyevans/GeNetIt
