@@ -15,4 +15,3 @@ export(gravity.es)
 export(knn.graph)
 exportClasses(gravity)
 import(nlme)
-import(velox)
